css/style.css
body { 
  background: linear-gradient(to top right, #ee9, lightblue);
  box-shadow: inset 0px 0px 100px 1px black;
  font-family: "open sans", sans-serif;
  height: 100vh;
  margin: 0px;
}
.heading {
  color: white;
  font-family: raleway, sans-serif;
  padding: 20px;
  text-align: center;
  text-shadow: 0px 0px 10px black;
}
.container {
  background: linear-gradient(to left, #c94b4b, #4b134f); 
  border-radius: 4px;
  box-shadow: 0px 0px 10px 1px #555;
  color: white;
  font-size: 20px;
  margin: 5vh auto;
  min-height: 700px;
  position: relative;
  text-align: center;
  width: 98%;
  max-width: 400px;
}
.top {
  height: 95%;
  width: 100%;
}
.top-bar {
  background: rgba(255, 255, 255, 0.1);
  margin-bottom: 1vh;
  padding: 6px 0;
}
.form-field {
  border-radius: 3px;
  border: 1px solid #eee9de;
  padding: 2px 4px;
  transition: all 0.2s ease;
}
.form-button {
  border: 1px solid white;
  border-radius: 3px;
  background: none;
  color: white;
  cursor: pointer;
  letter-spacing: 1px;
  padding: 2px 4px;
  transition: all 0.2s ease;
}
.form-field:hover {
  background: #eee;
}
.form-button:hover {
  box-shadow: 0px 0px 4px 1px silver;
}
.icon-box {
  height: 100px;
}
img {
  display: inline;
  margin: 0;
  padding: 0;
}
#icon {
  width: 100px;
}
#city {
  font-family: raleway;
  font-size: 22px;
  font-weight: 800;
}
.circle {
  border: 3px solid white;
  border-radius: 50%;
  height: 120px;
  margin: 30px auto;
  width: 120px;
}
#temp {
  font-size: 200%;
  margin-top: 26%;
}
.weather-desc-box {}
.weather-desc {
  display: inline-flex;
  margin-bottom: 1vh;
}
.info-container {
  padding-bottom: 30px;
  padding-left: 50px;
}
.info-box {
  display: inline-block;
  text-align: left;
  width: 40%;
}
.info-content {
  margin: 0 auto;
}
.wi {
  margin: 2px 4px;
}

.forecast-container {
  display: inline-flex;
  font-size: 15px;
  margin-bottom: 30px;
}
.forecast-box {
  color: yellow;
  margin: 10px 10px;
  width: 50px;
}
.forecast-temp {
  color: rgba(150, 180, 255);
}
.forecast-box-day {
  border-top: 1px solid rgba(255, 255, 255, 0.1);
  color: white;
  margin: 3px;
  padding: 2px;
}
.bottom {
  background: rgba(255, 255, 255, 0.1);
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
}

